Refactor styles and structure: move style.css to src/css, update index.html to reflect new path, and import styles in application.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Music Player - Dark Mode (Mock) - Updated</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
   <div class="app">
@@ -202,5 +202,6 @@
       <div style="width:90px" class="progress"><i style="width:60%"></i></div>
     </div>
   </div>
+<script type="module" src="/src/scripts/application.js"></script>
 </body>
 </html>
